grafics done but size and gap issues present

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   height: 100vh;
   color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
@@ -29,4 +30,34 @@
   font-size: 40px;
   font-weight: 400;
   font-style: normal;
+  margin: 30px auto;
+}
+
+.description__text {
+  padding: 0 30px 30px 30px;
+  line-height: 1.5;
+}
+
+.btn {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  padding: 20px;
+}
+
+.btn__rules {
+  background-color: #1fcca4;
+}
+
+.btn__rules:hover {
+  background-color: #1cbb96;
+}
+
+.btn__start-game {
+  background-color: #0197f6;
+}
+
+.btn__start-game:hover {
+  background-color: #0090e9;
 }
